fixed image bug

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ footer{
 
 .hero-image{
 
-  background-image: url("/assets/hero.jpg");
+  background-image: url("./assets/hero.jpg");
 }
 
 .image-text{
